fix: ocd alignment police is happy now

--- a/flwi-spacetraders-leaderboard/src/index.css
+++ b/flwi-spacetraders-leaderboard/src/index.css
@@ -123,6 +123,7 @@
 .left {
     padding-left: 1rem;
     padding-bottom: 1rem;
+    padding-top: 1rem;
     grid-area: left;
 }
 
